PR target/15790 * config/i386/i386-coff.h (ASM_OUTPUT_ALIGN): Define.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@82796 138bc75d-0d04-0410-961f-82ee72b054a4